# src/controllers/userControllers.ts
@@ -1,31 +1,24 @@
-
-
-
-
-
-
-
-
 import { Request, Response } from "express";
 import argon2 from "argon2";
 import { generateAccessToken } from "../authJWT";
-import jwt from 'jsonwebtoken';
+import jwt from "jsonwebtoken";
 import { User } from "../entities/User";
 import { Task } from "../entities/Task";
-import myDataSource from "../config/bd"
+import myDataSource from "../config/bd";
+
 export const createUser = async (req: Request, res: Response) => {
-      // #swagger.tags = ['users']
-      // #swagger.description = 'Endpoint to create a new user.'
-      // #swagger.summary = 'Create a new user'
-      // #swagger.parameters['user'] = { description: 'User object', required: true, type: 'object'}
+  // #swagger.tags = ['users']
+  // #swagger.description = 'Endpoint to create a new user.'
+  // #swagger.summary = 'Create a new user'
+  // #swagger.parameters['user'] = { description: 'User object', required: true, type: 'object'}
   try {
     const userRepository = myDataSource.getRepository(User);
 
     // Affichez le contenu de req.body pour le débogage
     console.log("req.body:", req.body);
     const hash = await argon2.hash(req.body.password);
-    console.log(hash)
-    req.body.password= hash;
+    console.log(hash);
+    req.body.password = hash;
     // Créez un nouvel utilisateur à partir de req.body
     const user = userRepository.create(req.body);
 
@@ -35,89 +28,84 @@ export const createUser = async (req: Request, res: Response) => {
     // Enregistrez l'utilisateur dans la base de données
     await userRepository.save(user);
 
-    return res.status(201).json({ message: "Utilisateur créé avec succès", user });
+    return res
+      .status(201)
+      .json({ message: "Utilisateur créé avec succès", user });
   } catch (err) {
     console.error("Erreur lors de la création de l'utilisateur :", err);
 
-    return res.status(500).json({ message: "Erreur lors de la création de l'utilisateur", error: err.message });
+    return res
+      .status(500)
+      .json({
+        message: "Erreur lors de la création de l'utilisateur",
+        error: err.message,
+      });
   }
 };
 export const connectUser = async (req: Request, res: Response) => {
   // #swagger.tags = ['Security']
   // #swagger.summary = 'Get authentication token'
   // #swagger.description = 'Endpoint to authenticate a user and return a JWT token'
-      const userRepository = myDataSource.getRepository(User);
-      const { username, password } = req.body;
-      console.log(username)
+  const userRepository = myDataSource.getRepository(User);
+  const { username, password } = req.body;
+  console.log(username);
   try {
     // Recherchez l'utilisateur par nom d'utilisateur
-    const user = await userRepository.findOneBy({username:username});
-    console.log(user)
-          if (user) {
-              // Vérifiez le mot de passe avec argon2
-              const isPasswordValid = await argon2.verify(user.password, password);
-  
-              if (isPasswordValid) {
-               ;
-                  //Générez un jeton d'accès ici
-                  const token = generateAccessToken(user.username , user.id.toString() );
-                  const decoded = jwt.decode(token);
-                  console.log(decoded)
-                  //  res.status(200).json(token);
-                  return res.status(201).json({ message: "Utilisateur connceter avec succès", token })
-                  
-              } else {
-                  res.status(400).json({ message: "Mauvais mot de passe !" });
-              }
-          } else {
-              res.status(404).json({ message: "Utilisateur non trouvé" });
-          }
-      } catch (err) {
-          res.status(500).json({ message: "Erreur lors de la connexion : " + err.message });
+    const user = await userRepository.findOneBy({ username: username });
+    console.log(user);
+    if (user) {
+      // Vérifiez le mot de passe avec argon2
+      const isPasswordValid = await argon2.verify(user.password, password);
+
+      if (isPasswordValid) {
+        //Générez un jeton d'accès ici
+        const token = generateAccessToken(user.username, user.id.toString());
+        const decoded = jwt.decode(token);
+        console.log(decoded);
+        //  res.status(200).json(token);
+        return res
+          .status(201)
+          .json({ message: "Utilisateur connecter avec succès", token });
+      } else {
+        res.status(400).json({ message: "Mauvais mot de passe !" });
       }
+    } else {
+      res.status(404).json({ message: "Utilisateur non trouvé" });
+    }
+  } catch (err) {
+    res
+      .status(500)
+      .json({ message: "Erreur lors de la connexion : " + err.message });
   }
+};
 export const getUser = async (req: Request, res: Response) => {
-      
-      const userRepository = myDataSource.getRepository(User);
-      const { username, password } = req.body;
-      console.log(username)
+  const userRepository = myDataSource.getRepository(User);
+  const { username, password } = req.body;
+  console.log(username);
   try {
     // Recherchez l'utilisateur par nom d'utilisateur
-    
+
     // const user = await userRepository.findOne({where: {username  : username }});
-    const user = await userRepository.find({relations: { tasks: true }});
-    console.log(user)
-    return res.status(201).json({ message: "Utilisateur connceter avec succès", user });
-         
-      } catch (err) {
-          res.status(500).json({ message: "Erreur lors de la connexion : " + err.message });
-      }
+    const user = await userRepository.find({ relations: { tasks: true } });
+    console.log(user);
+    return res
+      .status(201)
+      .json({ message: "Utilisateur connceter avec succès", user });
+  } catch (err) {
+    res
+      .status(500)
+      .json({ message: "Erreur lors de la connexion : " + err.message });
   }
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
+};
 
 // import { Request, Response } from "express";
 // import argon2  from "argon2";
 // import { User } from "../entities/User";
 
-
 // // interface UserBody {
 // //   firstname: string;
 // //   lastname: string;
 // // }
-
 
 // // export const createUser = async (
 // //     req: Request<unknown, unknown>,
@@ -136,12 +124,12 @@ export const getUser = async (req: Request, res: Response) => {
 //       // #swagger.description = 'Endpoint to create a new user.'
 //       // #swagger.summary = 'Create a new user'
 //       // #swagger.parameters['user'] = { description: 'User object', required: true, type: 'object'}
-     
+
 //     // await user.validate();
 //     try {
 //     const { username, email, password } = req.body;
 //          console.log(req.body)
-       
+
 //         const user = new User();
 //         console.log(user)
 //         // const hash = await argon2.hash(user.password);
@@ -153,4 +141,3 @@ export const getUser = async (req: Request, res: Response) => {
 //         res.status(404).json({ message: "createUser : " + err.message });
 //     }
 // }
-
