# src/routes/taskRoutes.ts
@@ -5,11 +5,11 @@ const router = Router();
 
 //router.get("/users", getUsers);
 router.use(authenticateToken);
-router.post("/addtask", createTask);
-router.post("/displayList/:id", getTask);
+router.post("/", createTask);
+router.get("/", getTask);
 
-router.post("/displayListComplited/:id", getTaskCompleted);
-router.put("/updateCompleted/:id", updateTask);
+router.get("/completed", getTaskCompleted);
+router.put("/:id", updateTask);
 
 // router.put("/users/:id", updateUser);
 
