# src/swagger_output.json
@@ -90,25 +90,8 @@
       }
     },
     "/displayUser": {
-      "post": {
+      "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -125,7 +108,7 @@
         }
       }
     },
-    "/task/addtask": {
+    "/task/": {
       "post": {
         "tags": [
           "tasks"
@@ -134,23 +117,12 @@
         "description": "Endpoint to create a new task.",
         "parameters": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "content": {
-                  "example": "any"
-                },
-                "isDone": {
+                "user": {
                   "example": "any"
                 }
               }
@@ -168,23 +140,13 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/task/displayList/{id}": {
-      "post": {
+      },
+      "get": {
         "tags": [
           "tasks"
         ],
         "summary": "Get all tasks",
         "description": "Endpoint to get all tasks.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "Tasks found."
@@ -195,21 +157,13 @@
         }
       }
     },
-    "/task/displayListComplited/{id}": {
-      "post": {
+    "/task/completed": {
+      "get": {
         "tags": [
           "tasks"
         ],
         "summary": "Get all tasks completed",
         "description": "Endpoint to get all tasks completed.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "Tasks completed found."
@@ -220,7 +174,7 @@
         }
       }
     },
-    "/task/updateCompleted/{id}": {
+    "/task/{id}": {
       "put": {
         "tags": [
           "tasks"
